<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/home_background"
    tools:context=".MainActivity">


        <EditText
            android:id="@+id/screen"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:textSize="45sp"
            android:padding="10dp"
            android:textStyle="bold"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:background="@drawable/screen"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            android:layout_marginTop="20dp"
            >

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:layout_weight="1"
                android:textSize="40sp"
                android:textStyle="bold"
                android:text="@string/one"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/two"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/three"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/add"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />
          </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            >

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/four"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:layout_weight="1"
                android:text="@string/five"
                android:textSize="40dp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:text="@string/six"
                android:textSize="40sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/btn_subtract"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:layout_weight="1"
                android:text="@string/subtract"
                android:textSize="40dp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            >

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn_multiply"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/multiply"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4"
            >

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/dot"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/zero"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn_equal"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/equal"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />

            <Button
                android:id="@+id/btn_divide"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:background="@drawable/button"
                android:text="@string/divide"
                android:textSize="40sp"
                android:textStyle="bold"
                android:layout_weight="1"
                android:layout_margin="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/cancel"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

</LinearLayout>